<resources>
    <string name="app_name">Список покупателей</string>
    <string name="addnewbueyrs">Добавление нового покупателя</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="middle_name">Отчество</string>
    <string name="phone">+7(999)-(999)-(99)-(99)</string>
    <string name="btnaddnewbueyr">Добавить</string>
    <string name="btnaddmenubacktomain">Вернуться</string>
    <string name="loadbd">Загрузка</string>

</resources>